# video-generate-agent

./: .gitignore  .gitmodules  README.md  main.py  main_cli.py  pyproject.toml  test_novel_agent.py  update.sh
agents/: __init__.py  audio_agent.py  image_agent.py  main_agent.py  novel_agent.py  scene_agent.py  talk_agent.py
assets/voice/: README.md
assets/workflow/: config.json
example/chapter_1/: index.txt
example/chapter_1/scenes/: scene_1.txt  scene_2.txt  scene_3.txt  scene_4.txt  scene_5.txt
example/chapter_1/scripts/: script_1.txt  script_2.txt  script_3.txt  script_4.txt  script_5.txt
example/chapter_1/srt/: srt_1.srt  srt_2.srt  srt_3.srt  srt_4.srt  srt_5.srt
example/chapters/chapter_1/: index.txt  scenes_scripts.json
example/chapters/chapter_1/srt/: srt_1.srt  srt_10.srt  srt_11.srt  srt_12.srt  srt_13.srt  srt_14.srt  srt_15.srt  srt_2.srt  srt_3.srt  srt_4.srt  srt_5.srt  srt_6.srt  srt_7.srt  srt_8.srt  srt_9.srt
tests/: audio_agent_test.py  image_agent_test.py  novel_agent_test.py  scene_agent_test.py  test_subtitles.py
utils/: comfyui.py  generate_img.py  llm.py  mcp.py  media_generator.py  novel.py  novel_creeper.py  novel_reader.py  scene.py  tts.py  video.py
